# musicology

./: .gitignore  README.md  TODO.md  client_secrets.json  config.json  langgraph.json  list_models.py  main.py  main_backup.py  prompt_builder.py  pyproject.toml  recommendation.py  utils.py  youtube_integration.py
src/: app_messages.py  list_models.py  preview_recommendations.py  prompts.py  schemas.py  tools.py  utils.py  youtube_integration.py
