[project]
name = "Musicology"
version = "0.0.1"
description = "Langgraph based app to recommend music based on user input"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "langchain-google-genai>=4.2.0",
    "langchain[anthropic,openai]>=1.2.4",
    "langgraph>=1.0.6",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.1",
]
